// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Tooltip>
  <li>
    <div
      className="create-project-repository"
      onClick={[Function]}
      role="listitem"
    >
      <div
        className="flex-1 display-flex-center"
      >
        <Checkbox
          checked={false}
          disabled={false}
          onCheck={[Function]}
          thirdState={false}
        />
        <img
          alt="Foo Provider"
          className="spacer-left"
          height={14}
          src="/images/sonarcloud/foo.svg"
          width={14}
        />
        <span
          className="spacer-left"
        >
          Awesome Project
        </span>
      </div>
    </div>
  </li>
</Tooltip>
`;

exports[`should render disabed 1`] = `
<Tooltip
  overlay="onboarding.create_project.subscribe_to_import_private_repositories"
>
  <li>
    <div
      className="create-project-repository disabled"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="listitem"
    >
      <div
        className="flex-1 display-flex-center"
      >
        <LockIcon
          fill="#bbb"
        />
        <img
          alt="Foo Provider"
          className="spacer-left icon-half-transparent"
          height={14}
          src="/images/sonarcloud/foo.svg"
          width={14}
        />
        <span
          className="spacer-left"
        >
          Awesome Project
        </span>
      </div>
    </div>
  </li>
</Tooltip>
`;

exports[`should render imported 1`] = `
<Tooltip>
  <li>
    <div
      className="create-project-repository imported"
      onClick={[Function]}
      role="listitem"
    >
      <div
        className="flex-1 display-flex-center"
      >
        <Checkbox
          checked={true}
          disabled={true}
          onCheck={[Function]}
          thirdState={false}
        />
        <img
          alt="Foo Provider"
          className="spacer-left"
          height={14}
          src="/images/sonarcloud/foo.svg"
          width={14}
        />
        <span
          className="spacer-left"
        >
          Cool Project
        </span>
      </div>
      <span>
        <CheckIcon
          className="little-spacer-right"
          fill="#00aa00"
        />
        <FormattedMessage
          defaultMessage="onboarding.create_project.repository_imported"
          id="onboarding.create_project.repository_imported"
          values={
            Object {
              "link": <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": undefined,
                      "id": "proj_cool",
                    },
                  }
                }
              >
                onboarding.create_project.see_project
              </Link>,
            }
          }
        />
      </span>
    </div>
  </li>
</Tooltip>
`;

exports[`should render private repositories 1`] = `
<Tooltip>
  <li>
    <div
      className="create-project-repository"
      onClick={[Function]}
      role="listitem"
    >
      <div
        className="flex-1 display-flex-center"
      >
        <Checkbox
          checked={false}
          disabled={false}
          onCheck={[Function]}
          thirdState={false}
        />
        <img
          alt="Foo Provider"
          className="spacer-left"
          height={14}
          src="/images/sonarcloud/foo.svg"
          width={14}
        />
        <span
          className="spacer-left"
        >
          Awesome Project
        </span>
        <div
          className="badge spacer-left"
        >
          visibility.private
        </div>
      </div>
    </div>
  </li>
</Tooltip>
`;

exports[`should render selected 1`] = `
<Tooltip>
  <li>
    <div
      className="create-project-repository selected"
      onClick={[Function]}
      role="listitem"
    >
      <div
        className="flex-1 display-flex-center"
      >
        <Checkbox
          checked={true}
          disabled={false}
          onCheck={[Function]}
          thirdState={false}
        />
        <img
          alt="Foo Provider"
          className="spacer-left"
          height={14}
          src="/images/sonarcloud/foo.svg"
          width={14}
        />
        <span
          className="spacer-left"
        >
          Awesome Project
        </span>
      </div>
    </div>
  </li>
</Tooltip>
`;
